# clio

./: .agents-cli-spec.md  .gitignore  README.md
museum-companion/: README.md  agents-cli-manifest.yaml  deployment_metadata.json  mcp_server.py  pyproject.toml
museum-companion-dashboard/: Dockerfile  README.md  main.py  pyproject.toml
museum-companion/app/: agent.py  catalog.json  fast_api_app.py
museum-companion/app/app_utils/: telemetry.py  typing.py
