[project]
name = "museum-companion-dashboard"
version = "0.1.0"
description = "Simulator Dashboard for Museum Companion Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-adk>=1.5.0",
    "google-cloud-aiplatform>=1.44.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
